# TemplateWindow

./: .gitignore  CMakeLists.txt  README.md
resources/: img.qrc
src/: widget.cpp  widget.h  widget.ui
